--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/dist
 /node_modules
 /.pnp
 .pnp.js
@@ -14,10 +15,6 @@
 # misc
 .DS_Store
 .env
-.env-dev.env
-.env-prod.env
-.env-preprod.env
-.env-stag.env
 
 npm-debug.log*
 yarn-debug.log*
