--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
 	"description": "react-boilerplate by thomi jasir",
 	"main": "index.js",
 	"engines": {
-    "npm": ">=8.0.0",
-    "node": "~16.13.0"
-  },
+		"npm": ">=8.0.0",
+		"node": "~16.13.0"
+	},
 	"scripts": {
+		"buildx": "yarn clean; webpack --config config/webpack-prod-config.js",
+    "clean": "rm -rf build/*",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack --mode=development",
 		"watch": "webpack -w",
-		"dev": "webpack-dev-server --mode=development --open --hot"
+		"devx": "webpack-dev-server --config scripts/webpack.dev.config.js --mode=development --open --hot",
+		"dev":"node scripts/webpack.dev.server.js",
+		"analyze": "source-map-explorer build/static/js/main.*"
 	},
 	"keywords": [
 		"react",
@@ -27,7 +31,8 @@
 		"axios": "^0.24.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.0.0"
+		"react-router-dom": "^6.0.0",
+		"source-map-explorer": "^2.5.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
@@ -35,13 +40,15 @@
 		"@babel/preset-react": "^7.16.0",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.5.1",
+		"fs-extra": "^10.0.0",
 		"html-webpack-plugin": "^5.5.0",
+		"node-sass": "^6.0.1",
+		"sass-loader": "^12.3.0",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.4.4",
 		"webpack": "^5.61.0",
 		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.4.0",
-		"fs-extra": "^10.0.0"
+		"webpack-dev-server": "^4.4.0"
 	}
 }
