--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
 	},
 	"scripts": {
 		"buildx": "yarn clean; webpack --config config/webpack-prod-config.js",
-    "clean": "rm -rf build/*",
+		"clean": "rm -rf build/*",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack --mode=development",
 		"watch": "webpack -w",
 		"devx": "webpack-dev-server --config scripts/webpack.dev.config.js --mode=development --open --hot",
-		"dev":"node scripts/webpack.dev.server.js",
+		"dev": "node scripts/webpack.dev.server.js",
 		"analyze": "source-map-explorer build/static/js/main.*"
 	},
 	"keywords": [
@@ -29,6 +29,7 @@
 		"@types/react": "^17.0.34",
 		"@types/react-dom": "^17.0.11",
 		"axios": "^0.24.0",
+		"file-loader": "^6.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.0.0",
@@ -40,6 +41,8 @@
 		"@babel/preset-react": "^7.16.0",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.5.1",
+		"dotenv-webpack": "^7.0.3",
+		"dotenv": "^10.0.0",
 		"fs-extra": "^10.0.0",
 		"html-webpack-plugin": "^5.5.0",
 		"node-sass": "^6.0.1",
