--- a/package.json
+++ b/package.json
@@ -1,57 +1,87 @@
 {
-	"name": "react-boilerplate",
-	"version": "1.0.0",
-	"node-version": "16.13.0",
-	"description": "react-boilerplate by thomi jasir",
-	"main": "index.js",
-	"engines": {
-		"npm": ">=8.0.0",
-		"node": "~16.13.0"
-	},
-	"scripts": {
-		"buildx": "yarn clean; webpack --config config/webpack-prod-config.js",
-		"clean": "rm -rf build/*",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --mode=development",
-		"watch": "webpack -w",
-		"devx": "webpack-dev-server --config scripts/webpack.dev.config.js --mode=development --open --hot",
-		"dev": "node scripts/webpack.dev.server.js",
-		"analyze": "source-map-explorer build/static/js/main.*"
-	},
-	"keywords": [
-		"react",
-		"boilerplate",
-		"architecture"
-	],
-	"author": "Thomi Jasir",
-	"license": "MIT",
-	"dependencies": {
-		"@types/react": "^17.0.34",
-		"@types/react-dom": "^17.0.11",
-		"axios": "^0.24.0",
-		"file-loader": "^6.2.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.0.0",
-		"source-map-explorer": "^2.5.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.16.0",
-		"@babel/preset-env": "^7.16.0",
-		"@babel/preset-react": "^7.16.0",
-		"babel-loader": "^8.2.3",
-		"css-loader": "^6.5.1",
-		"dotenv-webpack": "^7.0.3",
-		"dotenv": "^10.0.0",
-		"fs-extra": "^10.0.0",
-		"html-webpack-plugin": "^5.5.0",
-		"node-sass": "^6.0.1",
-		"sass-loader": "^12.3.0",
-		"style-loader": "^3.3.1",
-		"ts-loader": "^9.2.6",
-		"typescript": "^4.4.4",
-		"webpack": "^5.61.0",
-		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.4.0"
-	}
+  "name": "react-boilerplate",
+  "version": "1.0.0",
+  "node-version": "16.13.0",
+  "description": "react-boilerplate by thomi jasir",
+  "main": "index.js",
+  "engines": {
+    "npm": ">=8.0.0",
+    "node": "~16.13.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "scripts": {
+    "buildx": "npm run clean; webpack --config config/webpack-prod-config.js",
+    "clean": "rm -rf build/*",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=development",
+    "watch": "webpack -w",
+    "devx": "webpack-dev-server --config scripts/webpack.dev.config.js --mode=development --open --hot",
+    "dev": "node scripts/webpack.dev.server.js",
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "lint": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx",
+    "lint:fix": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
+    "format": "prettier --write \"{,!(node_modules)/**/}*.js\""
+  },
+  "keywords": [
+    "react",
+    "boilerplate",
+    "architecture"
+  ],
+  "author": "Thomi Jasir",
+  "license": "MIT",
+  "dependencies": {
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
+    "espree": "^9.0.0",
+    "file-loader": "^6.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0",
+    "source-map-explorer": "^2.5.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "fs-extra": "^10.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^6.0.1",
+    "prettier": "2.4.1",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
+  }
 }
