--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,30 +5,20 @@
     "noImplicitAny": true,
     "module": "esnext",
     "target": "es5",
-    "lib": [
-            "es2015",
-            "dom",
-            "dom.iterable",
-            "esnext"
-          ],
+    "lib": ["es2015", "dom", "dom.iterable", "esnext"],
     "jsx": "react",
     "allowJs": true,
     "sourceMap": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "newLine": "LF",
+    "newLine": "LF"
     // "typeRoots": [
     //   "node_modules/@types",
     // ]
   },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    ".git",
-    "node_modules"
-  ]
+  "include": ["./src/**/*"],
+  "exclude": [".git", "node_modules"]
 }
 // {
 //   "compilerOptions": {
