--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-boilerplate",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "node-version": "16.13.0",
   "description": "react-boilerplate by thomi jasir",
   "main": "index.js",
@@ -24,20 +24,26 @@
     ]
   },
   "scripts": {
+    "dev": "node scripts/webpack.dev.server.js",
+    "lint": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx",
+    "test": "jest --config=jest.config.json",
     "build": "npm run clean; webpack --config config/webpack-prod-config.js",
     "clean": "rm -rf build/*",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node scripts/webpack.dev.server.js",
-    "analyze": "source-map-explorer dist/*.js",
     "format": "prettier --write \"{,!(node_modules)/**/}*.js\"",
-    "lint": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx",
+    "analyze": "source-map-explorer dist/*.js",
     "lint:fix": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
     "web:build": "webpack --mode=development",
     "web:watch": "webpack -w",
     "web:dev": "webpack-dev-server --config scripts/webpack.dev.config.js --mode=development --open --hot",
     "v:patch": "npm version patch --no-git-tag-version",
     "v:minor": "npm version minor --no-git-tag-version",
-    "v:major": "npm version major --no-git-tag-version"
+    "v:major": "npm version major --no-git-tag-version",
+    "dev:stag": "cp .env-stag.env .env && npm run dev",
+    "dev:prod": "cp .env-prod.env .env && npm run dev",
+    "dev:preprod": "cp .env-preprod.env .env && npm run dev",
+    "test:coverage": "jest --config=jest.config.json --coverage",
+    "test:view": "jest --config=jest.config.json --coverage && open coverage/lcov-report/index.html",
+    "test:open": "open coverage/lcov-report/index.html"
   },
   "keywords": [
     "react",
@@ -53,6 +59,7 @@
     "espree": "^9.0.0",
     "file-loader": "^6.2.0",
     "react": "^17.0.2",
+    "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
     "source-map-explorer": "^2.5.2"
@@ -61,12 +68,20 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/enzyme": "^3.10.10",
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -77,10 +92,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.3.1",
+    "jest-canvas-mock": "^2.3.1",
+    "jest-watch-typeahead": "^1.0.0",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
