--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.21.0",
     "react-router-dom": "^6.0.0",
     "source-map-explorer": "^2.5.2"
   },
@@ -69,6 +70,7 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@formatjs/ts-transformer": "^3.6.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/enzyme": "^3.10.10",
@@ -77,6 +79,7 @@
     "@typescript-eslint/parser": "^5.3.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-loader": "^8.2.3",
+    "babel-plugin-formatjs": "^10.3.11",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
