--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "source-map-explorer": "^2.5.2"
   },
@@ -75,6 +76,9 @@
     "@testing-library/react": "^12.1.2",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.0.2",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
