--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
     "espree": "^9.0.0",
     "file-loader": "^6.2.0",
     "react": "^17.0.2",
