--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.0",
-    "source-map-explorer": "^2.5.2"
+    "react-router-dom": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -112,6 +111,7 @@
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "webpack-dev-server": "^4.4.0",
+    "source-map-explorer": "^2.5.2"
   }
 }
