--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "test:open": "open coverage/lcov-report/index.html",
     "release:minor": "standard-version --release-as minor",
     "release:patch": "standard-version --release-as patch",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "release:first": "npm run release -- --first-release"
   },
   "keywords": [
     "react",
