feat(Build): add webpack build production

--- a/package.json
+++ b/package.json
@@ -27,19 +27,18 @@
     "dev": "node scripts/webpack.dev.server.js",
     "lint": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx",
     "test": "jest --config=jest.config.json",
-    "build": "npm run clean; webpack --config config/webpack-prod-config.js",
-    "clean": "rm -rf build/*",
+    "build": "npm run clean; node scripts/update.build.js && webpack --config config/webpack.prod.config.js",
+    "clean": "rm -rf dist/*",
     "format": "prettier --write \"{,!(node_modules)/**/}*.js\"",
     "analyze": "source-map-explorer dist/*.js",
     "prepare": "husky install",
     "release": "standard-version",
     "lint:fix": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
-    "web:build": "webpack --mode=development",
-    "web:watch": "webpack -w",
-    "web:dev": "webpack-dev-server --config scripts/webpack.dev.config.js --mode=development --open --hot",
-    "v:patch": "npm version patch --no-git-tag-version",
-    "v:minor": "npm version minor --no-git-tag-version",
-    "v:major": "npm version major --no-git-tag-version",
+    "serve:dev": "webpack-dev-server --config scripts/webpack.dev.config.js",
+    "serve:prod": "lite-server --baseDir='dist'",
+    "build:stag": "cp .env-stag.env .env && npm run build",
+    "build:prod": "cp .env-prod.env .env && npm run build",
+    "build:preprod": "cp .env-preprod.env .env && npm run build",
     "dev:stag": "cp .env-stag.env .env && npm run dev",
     "dev:prod": "cp .env-prod.env .env && npm run dev",
     "dev:preprod": "cp .env-preprod.env .env && npm run dev",
@@ -92,7 +91,10 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-loader": "^8.2.3",
     "babel-plugin-formatjs": "^10.3.11",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.1.2",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "enzyme": "^3.11.0",
@@ -111,6 +113,8 @@
     "jest": "^27.3.1",
     "jest-canvas-mock": "^2.3.1",
     "jest-watch-typeahead": "^1.0.0",
+    "lite-server": "^2.6.1",
+    "mini-css-extract-plugin": "^2.4.4",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
     "sass-loader": "^12.3.0",
@@ -123,5 +127,6 @@
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
-  }
+  },
+  "buildDate": 1636429938447
 }
